# CGEngine2

./: CMakeLists.txt  CMakePresets.json  README.md
assets/: debug_fs.glsl  debug_ps.hlsl  debug_vs.glsl  debug_vs.hlsl
src/: CMakeLists.txt  cgengine.cpp  cgengine.h  main.cpp  pch.h  types.h
src/core/: CMakeLists.txt  logger.cpp  logger.hpp
src/io/: CMakeLists.txt  fileio.cpp  fileio.h
src/platform/: CMakeLists.txt  window.h  window_glfw.cpp
src/renderer/: CMakeLists.txt  context.cpp  context.h  context.hpp  context_d3d11.cpp  context_opengl.cpp  defines.h  renderer.cpp  renderer.h  renderer_d3d11.cpp  renderer_opengl.cpp
src/renderer/buffer/: buffer.cpp  buffer.h  buffer_opengl.cpp  layout.h
src/renderer/context/: context.cpp  context.h  context.hpp  context_d3d11.cpp  context_d3d11.h  context_opengl.cpp  context_opengl.h
src/renderer/shader/: shader.cpp  shader.h  shader_opengl.cpp
